// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders ReviewPage with votes 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c2 {
  line-height: 1.2;
  max-width: 66ch;
}

.c2 h1 {
  font-size: 1.5rem;
  line-height: 1.1;
  margin: 2rem 0 1rem;
}

.c2 h2 {
  font-size: 1.25rem;
  margin: 1.5rem 0 0.75rem;
}

.c2 h3,
.c2 p {
  font-size: 1rem;
  margin: 1rem 0;
}

.c2 h1 + h2 {
  margin-top: -0.75rem;
}

.c2 h1 + p,
.c2 h2 + p {
  margin-top: -0.75rem;
}

.c2 h3 + p {
  margin-top: -1rem;
}

.c2 :first-child {
  margin-top: 0;
}

.c2 :last-child {
  margin-bottom: 0;
}

.c11 {
  box-sizing: border-box;
  cursor: pointer;
  background: lightgrey;
  border: none;
  border-radius: 0.25rem;
  padding: 0.4rem 0.7rem;
  color: black;
  line-height: 1;
  white-space: nowrap;
}

.c3 {
  box-sizing: border-box;
  cursor: pointer;
  background: lightgrey;
  border: none;
  border-radius: 0.25rem;
  padding: 0.4rem 0.7rem;
  color: darkgrey;
  line-height: 1;
  white-space: nowrap;
  width: 100%;
}

.c12 {
  color: darkorange;
  font-weight: 600;
  word-break: break-word;
}

.c12:before {
  content: '!';
  display: inline-block;
  margin-top: -0.3rem;
  margin-right: 0.25rem;
  width: 1rem;
  height: 1rem;
  border-radius: 50%;
  background: darkorange;
  color: white;
  text-align: center;
  line-height: 1.1;
  font-size: 90%;
  font-weight: 800;
  vertical-align: middle;
}

.c9 {
  word-break: break-word;
}

.c9:before {
  content: '✓';
  display: inline-block;
  margin-top: -0.3rem;
  margin-right: 0.25rem;
  width: 1rem;
  height: 1rem;
  background: #028099;
  color: white;
  text-align: center;
  line-height: 1.1;
  font-size: 90%;
  font-weight: 800;
  vertical-align: middle;
}

.c1 {
  width: 100%;
  max-width: 35rem;
  margin: 0px auto;
  padding: 0.5rem 0.5rem;
}

.c13 {
  width: 100%;
  max-width: 35rem;
  margin: 0px auto;
  padding: 0.5rem 0.5rem;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  position: relative;
  overflow: auto;
}

.c4:before,
.c4:after {
  content: '';
  z-index: 1;
  -webkit-transition: opacity 0.25s ease;
  transition: opacity 0.25s ease;
  position: absolute;
  height: 0.25rem;
  width: 100%;
}

.c4:before {
  top: 0;
  opacity: 0;
  background: linear-gradient( to bottom, rgb(177,186,190) 0%, transparent 100% );
}

.c4:after {
  bottom: 0;
  opacity: 0;
  background: linear-gradient( to bottom, transparent 0%, rgb(177,186,190) 100% );
}

.c5 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  overflow: auto;
}

.c6 {
  width: 100%;
  max-width: 35rem;
  margin: 0 auto;
  padding: 0.5rem 0.5rem 1rem;
}

.c7 {
  color: inherit;
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-bottom: 0.75rem;
  box-shadow: 0 0.125rem 0.125rem 0 rgba(0,0,0,0.14), 0 0.1875rem 0.0625rem -0.125rem rgba(0,0,0,0.12), 0 0.0625rem 0.3125rem 0 rgba(0,0,0,0.2);
  border-radius: 0.125rem;
  background: white;
  padding: 0.375rem 0.5rem;
}

.c7:last-child {
  margin-bottom: 0;
}

button.c7 {
  cursor: pointer;
  text-align: left;
}

.c8 {
  line-height: 1.2;
  max-width: 66ch;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c8 h1 {
  font-size: 1.5rem;
  line-height: 1.1;
  margin: 2rem 0 1rem;
}

.c8 h2 {
  font-size: 1.25rem;
  margin: 1.5rem 0 0.75rem;
}

.c8 h3,
.c8 p {
  font-size: 1rem;
  margin: 0;
}

.c8 h1 + h2 {
  margin-top: -0.75rem;
}

.c8 h1 + p,
.c8 h2 + p {
  margin-top: -0.75rem;
}

.c8 h3 + p {
  margin-top: 0;
}

.c8 :first-child {
  margin-top: 0;
}

.c8 :last-child {
  margin-bottom: 0;
}

.c8 > h3 {
  font-weight: normal;
}

.c10 {
  display: none;
  padding-left: 2rem;
}

@media print {
  .c0 {
    -webkit-box-pack: start;
    -webkit-justify-content: flex-start;
    -ms-flex-pack: start;
    justify-content: flex-start;
    padding: 0;
  }
}

@media (min-width:480px) {
  .c2 {
    line-height: 1.3;
  }
}

@media print {
  .c12 {
    color: black;
  }
}

@media (min-width:768px) {
  .c1 {
    padding: 0.5rem 1rem;
  }
}

@media (min-width:768px) {
  .c13 {
    padding: 0.5rem 1rem;
  }
}

@media (min-width:768px) {
  .c6 {
    padding-right: 1rem;
    padding-left: 1rem;
  }
}

@media (min-width:480px) {
  .c7 {
    padding: 0.75rem 1rem;
  }
}

@media (min-width:480px) {
  .c8 {
    line-height: 1.3;
  }
}

@media (min-width:480px) {
  .c10 {
    display: block;
  }
}

<main
  class="c0"
>
  <div
    class="c1"
  >
    <div
      class="c2"
    >
      <h1>
        Review Your Ballot Selections
      </h1>
      <button
        class="c3"
        data-direction="up"
        disabled=""
        tabindex="-1"
        type="button"
      >
        ↑ See More
      </button>
    </div>
  </div>
  <div
    class="c4"
  >
    <div
      class="c5"
    >
      <div
        class="c6"
      >
        <a
          class="c7"
          href="/contests/0#review"
          id="contest-president"
          tabindex="0"
        >
          <div
            class="c8"
          >
            <h3
              aria-label="United States, President and Vice-President,"
            >
              United States
              , 
              President and Vice-President
            </h3>
            <p
              aria-label="Joseph Barchi and Joseph Hallaren, Federalist."
              class="c9"
            >
              <strong>
                Joseph Barchi and Joseph Hallaren
              </strong>
               
              / Federalist
            </p>
          </div>
          <div
            class="c10"
          >
            <div
              class="c11"
            >
              Change
            </div>
          </div>
        </a>
        <a
          class="c7"
          href="/contests/1#review"
          id="contest-senator"
          tabindex="0"
        >
          <div
            class="c8"
          >
            <h3
              aria-label="United States, Senator,"
            >
              United States
              , 
              Senator
            </h3>
            <p
              aria-label="Dennis Weiford, Federalist."
              class="c9"
            >
              <strong>
                Dennis Weiford
              </strong>
               
              / Federalist
            </p>
          </div>
          <div
            class="c10"
          >
            <div
              class="c11"
            >
              Change
            </div>
          </div>
        </a>
        <a
          class="c7"
          href="/contests/2#review"
          id="contest-representative-district-6"
          tabindex="0"
        >
          <div
            class="c8"
          >
            <h3
              aria-label="United States, Representative, District 6,"
            >
              United States
              , 
              Representative, District 6
            </h3>
            <p
              aria-label="No selection was made for Representative, District 6."
              class="c12"
            >
              No selection was made for this contest.
            </p>
          </div>
          <div
            class="c10"
          >
            <div
              class="c11"
            >
              Change
            </div>
          </div>
        </a>
        <a
          class="c7"
          href="/contests/3#review"
          id="contest-governor"
          tabindex="0"
        >
          <div
            class="c8"
          >
            <h3
              aria-label="State of Hamilton, Governor,"
            >
              State of Hamilton
              , 
              Governor
            </h3>
            <p
              aria-label="No selection was made for Governor."
              class="c12"
            >
              No selection was made for this contest.
            </p>
          </div>
          <div
            class="c10"
          >
            <div
              class="c11"
            >
              Change
            </div>
          </div>
        </a>
        <a
          class="c7"
          href="/contests/4#review"
          id="contest-lieutenant-governor"
          tabindex="0"
        >
          <div
            class="c8"
          >
            <h3
              aria-label="State of Hamilton, Lieutenant Governor,"
            >
              State of Hamilton
              , 
              Lieutenant Governor
            </h3>
            <p
              aria-label="No selection was made for Lieutenant Governor."
              class="c12"
            >
              No selection was made for this contest.
            </p>
          </div>
          <div
            class="c10"
          >
            <div
              class="c11"
            >
              Change
            </div>
          </div>
        </a>
        <a
          class="c7"
          href="/contests/5#review"
          id="contest-secretary-of-state"
          tabindex="0"
        >
          <div
            class="c8"
          >
            <h3
              aria-label="State of Hamilton, Secretary of State,"
            >
              State of Hamilton
              , 
              Secretary of State
            </h3>
            <p
              aria-label="No selection was made for Secretary of State."
              class="c12"
            >
              No selection was made for this contest.
            </p>
          </div>
          <div
            class="c10"
          >
            <div
              class="c11"
            >
              Change
            </div>
          </div>
        </a>
        <a
          class="c7"
          href="/contests/6#review"
          id="contest-state-senator-district-31"
          tabindex="0"
        >
          <div
            class="c8"
          >
            <h3
              aria-label="State of Hamilton, Senator, District 31,"
            >
              State of Hamilton
              , 
              Senator, District 31
            </h3>
            <p
              aria-label="No selection was made for Senator, District 31."
              class="c12"
            >
              No selection was made for this contest.
            </p>
          </div>
          <div
            class="c10"
          >
            <div
              class="c11"
            >
              Change
            </div>
          </div>
        </a>
        <a
          class="c7"
          href="/contests/7#review"
          id="contest-state-assembly-district-54"
          tabindex="0"
        >
          <div
            class="c8"
          >
            <h3
              aria-label="State of Hamilton, Assembly Member, District 54,"
            >
              State of Hamilton
              , 
              Assembly Member, District 54
            </h3>
            <p
              aria-label="No selection was made for Assembly Member, District 54."
              class="c12"
            >
              No selection was made for this contest.
            </p>
          </div>
          <div
            class="c10"
          >
            <div
              class="c11"
            >
              Change
            </div>
          </div>
        </a>
        <a
          class="c7"
          href="/contests/8#review"
          id="contest-county-commissioners"
          tabindex="0"
        >
          <div
            class="c8"
          >
            <h3
              aria-label="Franklin County, County Commissioners,"
            >
              Franklin County
              , 
              County Commissioners
            </h3>
            <p
              aria-label="No selection was made for County Commissioners."
              class="c12"
            >
              No selection was made for this contest.
            </p>
          </div>
          <div
            class="c10"
          >
            <div
              class="c11"
            >
              Change
            </div>
          </div>
        </a>
        <a
          class="c7"
          href="/contests/9#review"
          id="contest-county-registrar-of-wills"
          tabindex="0"
        >
          <div
            class="c8"
          >
            <h3
              aria-label="Franklin County, Registrar of Wills,"
            >
              Franklin County
              , 
              Registrar of Wills
            </h3>
            <p
              aria-label="No selection was made for Registrar of Wills."
              class="c12"
            >
              No selection was made for this contest.
            </p>
          </div>
          <div
            class="c10"
          >
            <div
              class="c11"
            >
              Change
            </div>
          </div>
        </a>
        <a
          class="c7"
          href="/contests/10#review"
          id="contest-city-mayor"
          tabindex="0"
        >
          <div
            class="c8"
          >
            <h3
              aria-label="City of Springfield, Mayor,"
            >
              City of Springfield
              , 
              Mayor
            </h3>
            <p
              aria-label="No selection was made for Mayor."
              class="c12"
            >
              No selection was made for this contest.
            </p>
          </div>
          <div
            class="c10"
          >
            <div
              class="c11"
            >
              Change
            </div>
          </div>
        </a>
        <a
          class="c7"
          href="/contests/11#review"
          id="contest-city-council"
          tabindex="0"
        >
          <div
            class="c8"
          >
            <h3
              aria-label="City of Springfield, City Council,"
            >
              City of Springfield
              , 
              City Council
            </h3>
            <p
              aria-label="No selection was made for City Council."
              class="c12"
            >
              No selection was made for this contest.
            </p>
          </div>
          <div
            class="c10"
          >
            <div
              class="c11"
            >
              Change
            </div>
          </div>
        </a>
        <a
          class="c7"
          href="/contests/12#review"
          id="contest-judicial-robert-demergue"
          tabindex="0"
        >
          <div
            class="c8"
          >
            <h3
              aria-label="Hamilton Court of Appeals, Retain Robert Demergue as Chief Justice?,"
            >
              Hamilton Court of Appeals
              , 
              Retain Robert Demergue as Chief Justice?
            </h3>
            <p
              aria-label="No selection was made for Retain Robert Demergue as Chief Justice?."
              class="c12"
            >
              No selection was made for this contest.
            </p>
          </div>
          <div
            class="c10"
          >
            <div
              class="c11"
            >
              Change
            </div>
          </div>
        </a>
        <a
          class="c7"
          href="/contests/13#review"
          id="contest-judicial-elmer-hull"
          tabindex="0"
        >
          <div
            class="c8"
          >
            <h3
              aria-label="Hamilton Court of Appeals, Retain Elmer Hull as Associate Justice?,"
            >
              Hamilton Court of Appeals
              , 
              Retain Elmer Hull as Associate Justice?
            </h3>
            <p
              aria-label="No selection was made for Retain Elmer Hull as Associate Justice?."
              class="c12"
            >
              No selection was made for this contest.
            </p>
          </div>
          <div
            class="c10"
          >
            <div
              class="c11"
            >
              Change
            </div>
          </div>
        </a>
        <a
          class="c7"
          href="/contests/14#review"
          id="contest-question-a"
          tabindex="0"
        >
          <div
            class="c8"
          >
            <h3
              aria-label="State of Hamilton, Question A: Recovery of Property Damages,"
            >
              State of Hamilton
              , 
              Question A: Recovery of Property Damages
            </h3>
            <p
              aria-label="No selection was made for Question A: Recovery of Property Damages."
              class="c12"
            >
              No selection was made for this contest.
            </p>
          </div>
          <div
            class="c10"
          >
            <div
              class="c11"
            >
              Change
            </div>
          </div>
        </a>
        <a
          class="c7"
          href="/contests/15#review"
          id="contest-question-b"
          tabindex="0"
        >
          <div
            class="c8"
          >
            <h3
              aria-label="State of Hamilton, Question B: Separation of Powers,"
            >
              State of Hamilton
              , 
              Question B: Separation of Powers
            </h3>
            <p
              aria-label="No selection was made for Question B: Separation of Powers."
              class="c12"
            >
              No selection was made for this contest.
            </p>
          </div>
          <div
            class="c10"
          >
            <div
              class="c11"
            >
              Change
            </div>
          </div>
        </a>
        <a
          class="c7"
          href="/contests/16#review"
          id="contest-question-c"
          tabindex="0"
        >
          <div
            class="c8"
          >
            <h3
              aria-label="State of Hamilton, Question C: Limits to Damages for Non-Economic Loss,"
            >
              State of Hamilton
              , 
              Question C: Limits to Damages for Non-Economic Loss
            </h3>
            <p
              aria-label="No selection was made for Question C: Limits to Damages for Non-Economic Loss."
              class="c12"
            >
              No selection was made for this contest.
            </p>
          </div>
          <div
            class="c10"
          >
            <div
              class="c11"
            >
              Change
            </div>
          </div>
        </a>
        <a
          class="c7"
          href="/contests/17#review"
          id="contest-proposition-1"
          tabindex="0"
        >
          <div
            class="c8"
          >
            <h3
              aria-label="State of Hamilton, Proposition 1: Gambling in Franklin and Fromwit Counties,"
            >
              State of Hamilton
              , 
              Proposition 1: Gambling in Franklin and Fromwit Counties
            </h3>
            <p
              aria-label="No selection was made for Proposition 1: Gambling in Franklin and Fromwit Counties."
              class="c12"
            >
              No selection was made for this contest.
            </p>
          </div>
          <div
            class="c10"
          >
            <div
              class="c11"
            >
              Change
            </div>
          </div>
        </a>
        <a
          class="c7"
          href="/contests/18#review"
          id="contest-measure-101"
          tabindex="0"
        >
          <div
            class="c8"
          >
            <h3
              aria-label="Franklin County, Measure 101: College District,"
            >
              Franklin County
              , 
              Measure 101: College District
            </h3>
            <p
              aria-label="No selection was made for Measure 101: College District."
              class="c12"
            >
              No selection was made for this contest.
            </p>
          </div>
          <div
            class="c10"
          >
            <div
              class="c11"
            >
              Change
            </div>
          </div>
        </a>
        <a
          class="c7"
          href="/contests/19#review"
          id="contest-102"
          tabindex="0"
        >
          <div
            class="c8"
          >
            <h3
              aria-label="Franklin County, Measure 102: Vehicle Abatement Program,"
            >
              Franklin County
              , 
              Measure 102: Vehicle Abatement Program
            </h3>
            <p
              aria-label="No selection was made for Measure 102: Vehicle Abatement Program."
              class="c12"
            >
              No selection was made for this contest.
            </p>
          </div>
          <div
            class="c10"
          >
            <div
              class="c11"
            >
              Change
            </div>
          </div>
        </a>
      </div>
    </div>
  </div>
  <div
    class="c13"
  >
    <button
      class="c3"
      data-direction="down"
      disabled=""
      tabindex="-1"
      type="button"
    >
      ↓ See More
    </button>
  </div>
</main>
`;

exports[`renders ReviewPage without votes 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c2 {
  line-height: 1.2;
  max-width: 66ch;
}

.c2 h1 {
  font-size: 1.5rem;
  line-height: 1.1;
  margin: 2rem 0 1rem;
}

.c2 h2 {
  font-size: 1.25rem;
  margin: 1.5rem 0 0.75rem;
}

.c2 h3,
.c2 p {
  font-size: 1rem;
  margin: 1rem 0;
}

.c2 h1 + h2 {
  margin-top: -0.75rem;
}

.c2 h1 + p,
.c2 h2 + p {
  margin-top: -0.75rem;
}

.c2 h3 + p {
  margin-top: -1rem;
}

.c2 :first-child {
  margin-top: 0;
}

.c2 :last-child {
  margin-bottom: 0;
}

.c11 {
  box-sizing: border-box;
  cursor: pointer;
  background: lightgrey;
  border: none;
  border-radius: 0.25rem;
  padding: 0.4rem 0.7rem;
  color: black;
  line-height: 1;
  white-space: nowrap;
}

.c3 {
  box-sizing: border-box;
  cursor: pointer;
  background: lightgrey;
  border: none;
  border-radius: 0.25rem;
  padding: 0.4rem 0.7rem;
  color: darkgrey;
  line-height: 1;
  white-space: nowrap;
  width: 100%;
}

.c9 {
  color: darkorange;
  font-weight: 600;
  word-break: break-word;
}

.c9:before {
  content: '!';
  display: inline-block;
  margin-top: -0.3rem;
  margin-right: 0.25rem;
  width: 1rem;
  height: 1rem;
  border-radius: 50%;
  background: darkorange;
  color: white;
  text-align: center;
  line-height: 1.1;
  font-size: 90%;
  font-weight: 800;
  vertical-align: middle;
}

.c1 {
  width: 100%;
  max-width: 35rem;
  margin: 0px auto;
  padding: 0.5rem 0.5rem;
}

.c12 {
  width: 100%;
  max-width: 35rem;
  margin: 0px auto;
  padding: 0.5rem 0.5rem;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  position: relative;
  overflow: auto;
}

.c4:before,
.c4:after {
  content: '';
  z-index: 1;
  -webkit-transition: opacity 0.25s ease;
  transition: opacity 0.25s ease;
  position: absolute;
  height: 0.25rem;
  width: 100%;
}

.c4:before {
  top: 0;
  opacity: 0;
  background: linear-gradient( to bottom, rgb(177,186,190) 0%, transparent 100% );
}

.c4:after {
  bottom: 0;
  opacity: 0;
  background: linear-gradient( to bottom, transparent 0%, rgb(177,186,190) 100% );
}

.c5 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  overflow: auto;
}

.c6 {
  width: 100%;
  max-width: 35rem;
  margin: 0 auto;
  padding: 0.5rem 0.5rem 1rem;
}

.c7 {
  color: inherit;
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-bottom: 0.75rem;
  box-shadow: 0 0.125rem 0.125rem 0 rgba(0,0,0,0.14), 0 0.1875rem 0.0625rem -0.125rem rgba(0,0,0,0.12), 0 0.0625rem 0.3125rem 0 rgba(0,0,0,0.2);
  border-radius: 0.125rem;
  background: white;
  padding: 0.375rem 0.5rem;
}

.c7:last-child {
  margin-bottom: 0;
}

button.c7 {
  cursor: pointer;
  text-align: left;
}

.c8 {
  line-height: 1.2;
  max-width: 66ch;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c8 h1 {
  font-size: 1.5rem;
  line-height: 1.1;
  margin: 2rem 0 1rem;
}

.c8 h2 {
  font-size: 1.25rem;
  margin: 1.5rem 0 0.75rem;
}

.c8 h3,
.c8 p {
  font-size: 1rem;
  margin: 0;
}

.c8 h1 + h2 {
  margin-top: -0.75rem;
}

.c8 h1 + p,
.c8 h2 + p {
  margin-top: -0.75rem;
}

.c8 h3 + p {
  margin-top: 0;
}

.c8 :first-child {
  margin-top: 0;
}

.c8 :last-child {
  margin-bottom: 0;
}

.c8 > h3 {
  font-weight: normal;
}

.c10 {
  display: none;
  padding-left: 2rem;
}

@media print {
  .c0 {
    -webkit-box-pack: start;
    -webkit-justify-content: flex-start;
    -ms-flex-pack: start;
    justify-content: flex-start;
    padding: 0;
  }
}

@media (min-width:480px) {
  .c2 {
    line-height: 1.3;
  }
}

@media print {
  .c9 {
    color: black;
  }
}

@media (min-width:768px) {
  .c1 {
    padding: 0.5rem 1rem;
  }
}

@media (min-width:768px) {
  .c12 {
    padding: 0.5rem 1rem;
  }
}

@media (min-width:768px) {
  .c6 {
    padding-right: 1rem;
    padding-left: 1rem;
  }
}

@media (min-width:480px) {
  .c7 {
    padding: 0.75rem 1rem;
  }
}

@media (min-width:480px) {
  .c8 {
    line-height: 1.3;
  }
}

@media (min-width:480px) {
  .c10 {
    display: block;
  }
}

<main
  class="c0"
>
  <div
    class="c1"
  >
    <div
      class="c2"
    >
      <h1>
        Review Your Ballot Selections
      </h1>
      <button
        class="c3"
        data-direction="up"
        disabled=""
        tabindex="-1"
        type="button"
      >
        ↑ See More
      </button>
    </div>
  </div>
  <div
    class="c4"
  >
    <div
      class="c5"
    >
      <div
        class="c6"
      >
        <a
          class="c7"
          href="/contests/0#review"
          id="contest-president"
          tabindex="0"
        >
          <div
            class="c8"
          >
            <h3
              aria-label="United States, President and Vice-President,"
            >
              United States
              , 
              President and Vice-President
            </h3>
            <p
              aria-label="No selection was made for President and Vice-President."
              class="c9"
            >
              No selection was made for this contest.
            </p>
          </div>
          <div
            class="c10"
          >
            <div
              class="c11"
            >
              Change
            </div>
          </div>
        </a>
        <a
          class="c7"
          href="/contests/1#review"
          id="contest-senator"
          tabindex="0"
        >
          <div
            class="c8"
          >
            <h3
              aria-label="United States, Senator,"
            >
              United States
              , 
              Senator
            </h3>
            <p
              aria-label="No selection was made for Senator."
              class="c9"
            >
              No selection was made for this contest.
            </p>
          </div>
          <div
            class="c10"
          >
            <div
              class="c11"
            >
              Change
            </div>
          </div>
        </a>
        <a
          class="c7"
          href="/contests/2#review"
          id="contest-representative-district-6"
          tabindex="0"
        >
          <div
            class="c8"
          >
            <h3
              aria-label="United States, Representative, District 6,"
            >
              United States
              , 
              Representative, District 6
            </h3>
            <p
              aria-label="No selection was made for Representative, District 6."
              class="c9"
            >
              No selection was made for this contest.
            </p>
          </div>
          <div
            class="c10"
          >
            <div
              class="c11"
            >
              Change
            </div>
          </div>
        </a>
        <a
          class="c7"
          href="/contests/3#review"
          id="contest-governor"
          tabindex="0"
        >
          <div
            class="c8"
          >
            <h3
              aria-label="State of Hamilton, Governor,"
            >
              State of Hamilton
              , 
              Governor
            </h3>
            <p
              aria-label="No selection was made for Governor."
              class="c9"
            >
              No selection was made for this contest.
            </p>
          </div>
          <div
            class="c10"
          >
            <div
              class="c11"
            >
              Change
            </div>
          </div>
        </a>
        <a
          class="c7"
          href="/contests/4#review"
          id="contest-lieutenant-governor"
          tabindex="0"
        >
          <div
            class="c8"
          >
            <h3
              aria-label="State of Hamilton, Lieutenant Governor,"
            >
              State of Hamilton
              , 
              Lieutenant Governor
            </h3>
            <p
              aria-label="No selection was made for Lieutenant Governor."
              class="c9"
            >
              No selection was made for this contest.
            </p>
          </div>
          <div
            class="c10"
          >
            <div
              class="c11"
            >
              Change
            </div>
          </div>
        </a>
        <a
          class="c7"
          href="/contests/5#review"
          id="contest-secretary-of-state"
          tabindex="0"
        >
          <div
            class="c8"
          >
            <h3
              aria-label="State of Hamilton, Secretary of State,"
            >
              State of Hamilton
              , 
              Secretary of State
            </h3>
            <p
              aria-label="No selection was made for Secretary of State."
              class="c9"
            >
              No selection was made for this contest.
            </p>
          </div>
          <div
            class="c10"
          >
            <div
              class="c11"
            >
              Change
            </div>
          </div>
        </a>
        <a
          class="c7"
          href="/contests/6#review"
          id="contest-state-senator-district-31"
          tabindex="0"
        >
          <div
            class="c8"
          >
            <h3
              aria-label="State of Hamilton, Senator, District 31,"
            >
              State of Hamilton
              , 
              Senator, District 31
            </h3>
            <p
              aria-label="No selection was made for Senator, District 31."
              class="c9"
            >
              No selection was made for this contest.
            </p>
          </div>
          <div
            class="c10"
          >
            <div
              class="c11"
            >
              Change
            </div>
          </div>
        </a>
        <a
          class="c7"
          href="/contests/7#review"
          id="contest-state-assembly-district-54"
          tabindex="0"
        >
          <div
            class="c8"
          >
            <h3
              aria-label="State of Hamilton, Assembly Member, District 54,"
            >
              State of Hamilton
              , 
              Assembly Member, District 54
            </h3>
            <p
              aria-label="No selection was made for Assembly Member, District 54."
              class="c9"
            >
              No selection was made for this contest.
            </p>
          </div>
          <div
            class="c10"
          >
            <div
              class="c11"
            >
              Change
            </div>
          </div>
        </a>
        <a
          class="c7"
          href="/contests/8#review"
          id="contest-county-commissioners"
          tabindex="0"
        >
          <div
            class="c8"
          >
            <h3
              aria-label="Franklin County, County Commissioners,"
            >
              Franklin County
              , 
              County Commissioners
            </h3>
            <p
              aria-label="No selection was made for County Commissioners."
              class="c9"
            >
              No selection was made for this contest.
            </p>
          </div>
          <div
            class="c10"
          >
            <div
              class="c11"
            >
              Change
            </div>
          </div>
        </a>
        <a
          class="c7"
          href="/contests/9#review"
          id="contest-county-registrar-of-wills"
          tabindex="0"
        >
          <div
            class="c8"
          >
            <h3
              aria-label="Franklin County, Registrar of Wills,"
            >
              Franklin County
              , 
              Registrar of Wills
            </h3>
            <p
              aria-label="No selection was made for Registrar of Wills."
              class="c9"
            >
              No selection was made for this contest.
            </p>
          </div>
          <div
            class="c10"
          >
            <div
              class="c11"
            >
              Change
            </div>
          </div>
        </a>
        <a
          class="c7"
          href="/contests/10#review"
          id="contest-city-mayor"
          tabindex="0"
        >
          <div
            class="c8"
          >
            <h3
              aria-label="City of Springfield, Mayor,"
            >
              City of Springfield
              , 
              Mayor
            </h3>
            <p
              aria-label="No selection was made for Mayor."
              class="c9"
            >
              No selection was made for this contest.
            </p>
          </div>
          <div
            class="c10"
          >
            <div
              class="c11"
            >
              Change
            </div>
          </div>
        </a>
        <a
          class="c7"
          href="/contests/11#review"
          id="contest-city-council"
          tabindex="0"
        >
          <div
            class="c8"
          >
            <h3
              aria-label="City of Springfield, City Council,"
            >
              City of Springfield
              , 
              City Council
            </h3>
            <p
              aria-label="No selection was made for City Council."
              class="c9"
            >
              No selection was made for this contest.
            </p>
          </div>
          <div
            class="c10"
          >
            <div
              class="c11"
            >
              Change
            </div>
          </div>
        </a>
        <a
          class="c7"
          href="/contests/12#review"
          id="contest-judicial-robert-demergue"
          tabindex="0"
        >
          <div
            class="c8"
          >
            <h3
              aria-label="Hamilton Court of Appeals, Retain Robert Demergue as Chief Justice?,"
            >
              Hamilton Court of Appeals
              , 
              Retain Robert Demergue as Chief Justice?
            </h3>
            <p
              aria-label="No selection was made for Retain Robert Demergue as Chief Justice?."
              class="c9"
            >
              No selection was made for this contest.
            </p>
          </div>
          <div
            class="c10"
          >
            <div
              class="c11"
            >
              Change
            </div>
          </div>
        </a>
        <a
          class="c7"
          href="/contests/13#review"
          id="contest-judicial-elmer-hull"
          tabindex="0"
        >
          <div
            class="c8"
          >
            <h3
              aria-label="Hamilton Court of Appeals, Retain Elmer Hull as Associate Justice?,"
            >
              Hamilton Court of Appeals
              , 
              Retain Elmer Hull as Associate Justice?
            </h3>
            <p
              aria-label="No selection was made for Retain Elmer Hull as Associate Justice?."
              class="c9"
            >
              No selection was made for this contest.
            </p>
          </div>
          <div
            class="c10"
          >
            <div
              class="c11"
            >
              Change
            </div>
          </div>
        </a>
        <a
          class="c7"
          href="/contests/14#review"
          id="contest-question-a"
          tabindex="0"
        >
          <div
            class="c8"
          >
            <h3
              aria-label="State of Hamilton, Question A: Recovery of Property Damages,"
            >
              State of Hamilton
              , 
              Question A: Recovery of Property Damages
            </h3>
            <p
              aria-label="No selection was made for Question A: Recovery of Property Damages."
              class="c9"
            >
              No selection was made for this contest.
            </p>
          </div>
          <div
            class="c10"
          >
            <div
              class="c11"
            >
              Change
            </div>
          </div>
        </a>
        <a
          class="c7"
          href="/contests/15#review"
          id="contest-question-b"
          tabindex="0"
        >
          <div
            class="c8"
          >
            <h3
              aria-label="State of Hamilton, Question B: Separation of Powers,"
            >
              State of Hamilton
              , 
              Question B: Separation of Powers
            </h3>
            <p
              aria-label="No selection was made for Question B: Separation of Powers."
              class="c9"
            >
              No selection was made for this contest.
            </p>
          </div>
          <div
            class="c10"
          >
            <div
              class="c11"
            >
              Change
            </div>
          </div>
        </a>
        <a
          class="c7"
          href="/contests/16#review"
          id="contest-question-c"
          tabindex="0"
        >
          <div
            class="c8"
          >
            <h3
              aria-label="State of Hamilton, Question C: Limits to Damages for Non-Economic Loss,"
            >
              State of Hamilton
              , 
              Question C: Limits to Damages for Non-Economic Loss
            </h3>
            <p
              aria-label="No selection was made for Question C: Limits to Damages for Non-Economic Loss."
              class="c9"
            >
              No selection was made for this contest.
            </p>
          </div>
          <div
            class="c10"
          >
            <div
              class="c11"
            >
              Change
            </div>
          </div>
        </a>
        <a
          class="c7"
          href="/contests/17#review"
          id="contest-proposition-1"
          tabindex="0"
        >
          <div
            class="c8"
          >
            <h3
              aria-label="State of Hamilton, Proposition 1: Gambling in Franklin and Fromwit Counties,"
            >
              State of Hamilton
              , 
              Proposition 1: Gambling in Franklin and Fromwit Counties
            </h3>
            <p
              aria-label="No selection was made for Proposition 1: Gambling in Franklin and Fromwit Counties."
              class="c9"
            >
              No selection was made for this contest.
            </p>
          </div>
          <div
            class="c10"
          >
            <div
              class="c11"
            >
              Change
            </div>
          </div>
        </a>
        <a
          class="c7"
          href="/contests/18#review"
          id="contest-measure-101"
          tabindex="0"
        >
          <div
            class="c8"
          >
            <h3
              aria-label="Franklin County, Measure 101: College District,"
            >
              Franklin County
              , 
              Measure 101: College District
            </h3>
            <p
              aria-label="No selection was made for Measure 101: College District."
              class="c9"
            >
              No selection was made for this contest.
            </p>
          </div>
          <div
            class="c10"
          >
            <div
              class="c11"
            >
              Change
            </div>
          </div>
        </a>
        <a
          class="c7"
          href="/contests/19#review"
          id="contest-102"
          tabindex="0"
        >
          <div
            class="c8"
          >
            <h3
              aria-label="Franklin County, Measure 102: Vehicle Abatement Program,"
            >
              Franklin County
              , 
              Measure 102: Vehicle Abatement Program
            </h3>
            <p
              aria-label="No selection was made for Measure 102: Vehicle Abatement Program."
              class="c9"
            >
              No selection was made for this contest.
            </p>
          </div>
          <div
            class="c10"
          >
            <div
              class="c11"
            >
              Change
            </div>
          </div>
        </a>
      </div>
    </div>
  </div>
  <div
    class="c12"
  >
    <button
      class="c3"
      data-direction="down"
      disabled=""
      tabindex="-1"
      type="button"
    >
      ↓ See More
    </button>
  </div>
</main>
`;
